# google-tui

./: README.md  requirements.txt  setup.cfg
google_tui/: __init__.py  cli.py  core.py
