[metadata]
name = google-tui
version = attr: google_tui.__version__
description = A textual user interface to google.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wasi-master/google-tui
author = Wasi Master
author_email = arianmollik323@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Terminals
keywords =
    google_tui,
    google,
    googlesearch,
    python-googlesearch,
    googlesearch-python,
    python
project_urls =
    Bug Tracker = https://github.com/wasi-master/google-tui/issues
    Source = https://github.com/wasi-master/google-tui
    Say Thanks = https://saythanks.io/to/wasi-master

[options]
packages =
    google_tui
install_requires =
    rich
    rich-click
    textual
    textual-inputs==0.2.*
    async_cse
python_requires = >=3.6
zip_safe = False

[options.entry_points]
console_scripts =
    google-tui=google_tui.__main__:main
pipx.run =
    google-tui=google_tui.__main__:main

